--- a/server/server.cbp
+++ b/server/server.cbp
@@ -12,8 +12,13 @@
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
+					<Add option="-std=c++11" />
 					<Add option="-g" />
+					<Add option="-pthread" />
 				</Compiler>
+				<Linker>
+					<Add option="-pthread" />
+				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/server" prefix_auto="1" extension_auto="1" />
@@ -32,7 +37,12 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="UserData.cpp" />
+		<Unit filename="UserData.h" />
+		<Unit filename="loginComponent.cpp" />
+		<Unit filename="loginComponent.h" />
 		<Unit filename="main.cpp" />
+		<Unit filename="userData.h" />
 		<Extensions>
 			<code_completion />
 			<debugger />
